Fix #26 - Add distinction for GLONASS satellites.  Add flag image to Status view, and show GLONASS sats as squares in Sky view.

--- a/GPSTest/src/main/res/values/strings.xml
+++ b/GPSTest/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="gps_bearing_label">Bearing: </string>
 
     <string name="gps_prn_column_label">PRN</string>
+    <string name="gps_flag_image_label">GNSS</string>
     <string name="gps_snr_column_label">SNR</string>
     <string name="gps_elevation_column_label">Elev</string>
     <string name="gps_azimuth_column_label">Azim</string>
