Changes string for map tilt preference.

--- a/GPSTest/src/main/res/values/strings.xml
+++ b/GPSTest/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="pref_rotate_map_with_compass_title">Rotate Map with Compass</string>
     <string name="pref_rotate_map_with_compass_summary">Change the map orientation based on your direction</string>
 
-    <string name="pref_tilt_map_with_sensors_title">Tilt Map with Device</string>
+    <string name="pref_tilt_map_with_sensors_title">First-person View</string>
     <string name="pref_tilt_map_with_sensors_summary">Change to a first-person view when you hold up the device</string>
     
     <string name="pref_gps_category_title">GPS</string>
