--- a/GPSTest/src/main/res/values/strings.xml
+++ b/GPSTest/src/main/res/values/strings.xml
@@ -97,6 +97,8 @@
     <string name="pref_display_category_title">Display</string>
     <string name="pref_keep_screen_on_title">Keep Screen On</string>
     <string name="pref_keep_screen_on_summary">Prevents the screen from turning off</string>
+    <string name="pref_use_tabs_on_large_screen_title">Use Tabs on Large Screens</string>
+    <string name="pref_use_tabs_on_large_screen_summary">Show data on tabs instead of one screen</string>
     
     <string name="pref_about_category_title">About</string>    
     <string name="pref_show_tutorial_title">Show tutorial</string>
